--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,10 @@
 {
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "plugin:@typescript-eslint/recommended"
     ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"],
     "env": {
         "browser": true,
         "node": true
@@ -13,5 +16,12 @@
         "no-plusplus": "off",
         "no-restricted-syntax": "off",
         "no-param-reassign": "off"
-    }
+    },
+    "settings": {
+        "import/resolver": {
+          "node": {
+            "extensions": [".js", ".jsx", ".ts", ".tsx"]
+          }
+        }
+      },
 }
