Finish BubbleSort and MergeSort

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
         "no-restricted-syntax": "off",
         "no-param-reassign": "off",
         "func-names": "off",
+        "no-bitwise": "off",
         "@typescript-eslint/interface-name-prefix": "off"
     },
     "settings": {
