--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
         "node": true
     },
     "rules": {
+        "linebreak-style": "off",
         "eqeqeq": "warn",
         "no-continue": "off",
         "no-labels": "off",
@@ -21,7 +22,7 @@
         "func-names": "off",
         "no-bitwise": "off",
         "arrow-parens": "off",
-        "lines-between-class-members": "off",
+        "lines-between-class-members": 0,
         "import/prefer-default-export": "off",
         "@typescript-eslint/interface-name-prefix": "off"
     },
