--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
         "func-names": "off",
         "no-bitwise": "off",
         "arrow-parens": "off",
+        "no-underscore-dangle": "off",
         "lines-between-class-members": 0,
         "import/prefer-default-export": "off",
         "@typescript-eslint/interface-name-prefix": "off"
