--- a/week-04/day-04/gallery/package.json
+++ b/week-04/day-04/gallery/package.json
@@ -6,7 +6,10 @@
     "classname": "^0.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
