--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "q-io": "^1.13.6",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
     "typescript": "^3.6.4"
   }
 }
