fix: fix some bugs on updating todo

--- a/week-06/day-04/todos-server/package.json
+++ b/week-06/day-04/todos-server/package.json
@@ -10,6 +10,7 @@
   "author": "kyya",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^2.0.1"
   }
 }
