refactor(bookstore): refactor importing user data

--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "@types/node": "^12.11.7",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
+    "dotenv": "^8.2.0",
     "ejs": "^2.7.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "mysql2": "^2.0.0",
     "q-io": "^1.13.6",
