--- a/week-07/project/server/package.json
+++ b/week-07/project/server/package.json
@@ -11,6 +11,7 @@
   "author": "Kyya",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.0.1"
