--- a/week-07/project/client/package.json
+++ b/week-07/project/client/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
